# src/app/services/models/api-response-verification-level.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface ApiResponseVerificationLevel {
+  data?: 'UNVERIFIED' | 'EMAIL_VERIFIED' | 'ID_VERIFIED' | 'FULLY_VERIFIED';
+  message?: string;
+  success?: boolean;
+}
